[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Camera.gd" type="Script" id=1]
[ext_resource path="res://scenes/WeatherManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Map.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/PathMaker.gd" type="Script" id=6]
[ext_resource path="res://scripts/BuildManager.gd" type="Script" id=7]
[ext_resource path="res://scripts/RessourceManager.gd" type="Script" id=8]

[node name="Scene" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="." groups=[
"camera",
]]
offset = Vector2( 602, 150 )
current = true
script = ExtResource( 1 )

[node name="WeatherManager" parent="." instance=ExtResource( 2 )]

[node name="Modulate" type="CanvasModulate" parent="."]

[node name="LayerUI" type="CanvasLayer" parent="."]
layer = 2

[node name="UI" parent="LayerUI" instance=ExtResource( 3 )]

[node name="Map" parent="." instance=ExtResource( 4 )]
show_case_size = 24
debug_mode = true

[node name="MapControls" type="Node2D" parent="."]

[node name="ParallaxBackground" parent="." instance=ExtResource( 5 )]
layer = -1

[node name="PathMaker" type="Node" parent="." groups=[
"path_maker",
]]
editor/display_folded = true
script = ExtResource( 6 )

[node name="Line2D" type="Line2D" parent="PathMaker"]
width = 8.0
default_color = Color( 0, 0, 0, 0.352941 )
texture_mode = -992608255
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="BuildManager" type="Node" parent="." groups=[
"build_manager",
]]
script = ExtResource( 7 )

[node name="RessourceManager" type="Node" parent="." groups=[
"ressource_manager",
]]
script = ExtResource( 8 )
